@@ -1,3 +1,3 @@
 module RailsAppsPages
-  VERSION = "0.5.12"
+  VERSION = "0.5.13"
 end
