@@ -1,5 +1,9 @@
 h1. CHANGELOG
 
+h3. 0.5.13 August 27, 2014
+
+* support 'rails-devise-roles' example application
+
 h3. 0.5.12 August 14, 2014
 
 * minor change to routes for OmniAuth user pages
